Fix a tag jumping around
See https://github.com/lauripiispanen/github-top/issues/212 for details

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -93,3 +93,7 @@ ul.mode-selector {
     }
   }
 }
+
+footer {
+  width: 275px;
+}
